--- a/Squeeby App/Views/Account/Login.cshtml
+++ b/Squeeby App/Views/Account/Login.cshtml
@@ -27,7 +27,7 @@
             <button id="register" class="btn-small red accent-2">Registrar</button>
         </div>
         <div class="col s12 center">
-            <a id="forgot" class="link small-text">¿Olvidó su contraseña?</a>
+            <a id="forgot" class="link text-small">¿Olvidó su contraseña?</a>
         </div>
     </div>
 </div>
