--- a/Squeeby App/Views/Shared/_Layout.cshtml
+++ b/Squeeby App/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/materialize/css/materialize.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/site.min.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="~/lib/materialize/css/materialize.min.css" />
